<resources>
    <string name="app_name">summerpractice</string>
    <string name="data">Enter data</string>
    <string name="name_user">Name</string>
    <string name="height_user">Height</string>
    <string name="weight_user">Weight</string>
    <string name="age_user">Age</string>
    <string name="button_click">Click</string>
    <string name="answer">Answer:</string>
    <string name="name">Calorie Calculator</string>
</resources>